codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chatwidget_markdown_code_blocks_vt100_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

























•     -- Indented code block (4 spaces)
      SELECT *
      FROM "users"
      WHERE "email" LIKE '%@example.com';

  ```sh
  printf 'fenced within fenced\n'
  ```

  {
    // comment allowed in jsonc
    "path": "C:\\Program Files\\App",
    "regex": "^foo.*(bar)?$"
  }
────────────────────────────────────────────────────────────────────────────────
• weekly limit remaining:   100%
• tokens: total:            0 (0%)
          cached-input:     0 (0%)
          non-cached-input: 0 (0%)
          normal-output:    0 (0%)
          reasoning-output: 0 (0%)
• files created 0 · deleted 0 · modified 0 · lines +0 / -0
• time wall 0ms · finished 2026-01-01 00:00:00
────────────────────────────────────────────────────────────────────────────────
