codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__completion_after_streamed_tool_answer.snap
---
source: tui/src/chatwidget/tests/completion_styling_tests.rs
expression: text
---
• Ran echo ready
  └ ready

• The change is ready.

────────────────────────────────────────────────────────────────────────────────
• weekly limit remaining:   100%
• tokens: total:            0 (0%)
          cached-input:     0 (0%)
          non-cached-input: 0 (0%)
          normal-output:    0 (0%)
          reasoning-output: 0 (0%)
• files created 0 · deleted 0 · modified 0 · lines +0 / -0
• time wall 2m 5.0s · finished 2026-01-01 00:00:00
────────────────────────────────────────────────────────────────────────────────
