codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Reasoning Level for GPT-5.5


  1. Low               Fast responses with lighter reasoning
  2. Medium (default)  Balances speed and reasoning depth for everyday tasks
  3. Max               Maximum available reasoning
› 4. High (current)    Greater reasoning depth for complex problems
  5. Extra high        Extra high reasoning depth for complex problems
  6. Ultra             Ultra reasoning
  7. Persistent        Continue working until put to sleep

  enter default · s session · esc back
